# aoc22

./: Cargo.toml
src/: scratch.rs  template.rs
src/01rs/: 01.rs  main.rs
src/02rs/: main.rs
src/03rs/: main.rs
src/04rs/: main.rs
src/05rs/: main.rs
src/06rs/: main.rs
src/07rs/: main.rs
src/08rs/: main.rs
src/09rs/: main.rs
src/10rs/: main.rs
src/11rs/: main.rs
src/12rs/: ex2.in.txt  main.rs
src/13rs/: main.rs
src/14rs/: main.rs
src/15rs/: main.rs
src/16rs/: main.rs
src/17rs/: main.rs
