[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"


[[bin]]
name = "01"
path = "src/01rs/main.rs"

[[bin]]
name = "02"
path = "src/02rs/main.rs"

[[bin]]
name = "03"
path = "src/03rs/main.rs"

[[bin]]
name = "04"
path = "src/04rs/main.rs"
