[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num-bigint = "0.4.3"


[[bin]]
name = "01"
path = "src/01rs/main.rs"

[[bin]]
name = "02"
path = "src/02rs/main.rs"

[[bin]]
name = "03"
path = "src/03rs/main.rs"

[[bin]]
name = "04"
path = "src/04rs/main.rs"

[[bin]]
name = "05"
path = "src/05rs/main.rs"

[[bin]]
name = "06"
path = "src/06rs/main.rs"

[[bin]]
name = "07"
path = "src/07rs/main.rs"

[[bin]]
name = "08"
path = "src/08rs/main.rs"

[[bin]]
name = "09"
path = "src/09rs/main.rs"

[[bin]]
name = "10"
path = "src/10rs/main.rs"

[[bin]]
name = "11"
path = "src/11rs/main.rs"
